something being happening

--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "ls",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Rye-Guy/NYTReactApp.git"
@@ -15,5 +12,11 @@
     "url": "https://github.com/Rye-Guy/NYTReactApp/issues"
   },
   "homepage": "https://github.com/Rye-Guy/NYTReactApp#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "mongoose": "^5.2.13",
+    "path": "^0.12.7"
+  }
 }
