--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "type": "git",
     "url": "git+https://github.com/Rye-Guy/NYTReactApp.git"
   },
+  "scripts":{
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\""
+  },
   "author": "",
   "license": "ISC",
   "bugs": {
