--- a/package.json
+++ b/package.json
@@ -4,28 +4,29 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Rye-Guy/NYTReactApp.git"
+    "url": "git+https://github.com/christinebonk/nytreact.git"
   },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js",
+    "install": "cd client && yarn install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Rye-Guy/NYTReactApp/issues"
+  "devDependencies": {
+    "concurrently": "^3.5.0",
+    "nodemon": "^1.11.0"
   },
-  "homepage": "https://github.com/Rye-Guy/NYTReactApp#readme",
-  "description": "",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "if-env": "^1.0.4",
-    "mongoose": "^5.2.13",
-    "path": "^0.12.7"
+    "axios": "^0.16.2",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.4",
+    "mongoose": "^5.0.17",
+    "if-env": "^1.0.4"
   }
 }
