--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "url": "git+https://github.com/christinebonk/nytreact.git"
   },
   "scripts": {
-    "server": "node server.js",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
-    "start": "./node_modules/.bin/concurrently \"./node_modules/.bin/nodemon\" \"npm run client\"",
+    "seed": "node scripts/seedDB.js",
+    "install": "cd client && yarn install",
     "build": "cd client && npm run build",
-    "deploy": "yarn build && git add . && git commit -m \"Building for production\" && git push heroku master",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "heroku-postbuild": "npm run build"
   },
   "author": "",
   "license": "ISC",
