--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
-    "seed": "node scripts/seedDB.js",
-    "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "seed": "node scripts/seedDB.js"
   },
   "author": "",
   "license": "ISC",
