--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
+    "build": "cd client && npm run build",
+    "deploy": "yarn build && git add . && git commit -m \"Building for production\" && git push heroku master",
     "seed": "node scripts/seedDB.js"
   },
   "author": "",
