--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "client": "cd client && npm run start",
     "build": "cd client && npm run build",
     "deploy": "yarn build && git add . && git commit -m \"Building for production\" && git push heroku master",
-    "seed": "node scripts/seedDB.js"
+    "seed": "node scripts/seedDB.js",
+    "heroku-postbuild": "npm run build"
   },
   "author": "",
   "license": "ISC",
