--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
+    "start": "./node_modules/.bin/concurrently \"./node_modules/.bin/nodemon\" \"npm run client\"",
     "build": "cd client && npm run build",
     "deploy": "yarn build && git add . && git commit -m \"Building for production\" && git push heroku master",
-    "seed": "node scripts/seedDB.js",
-    "heroku-postbuild": "npm run build"
+    "seed": "node scripts/seedDB.js"
   },
   "author": "",
   "license": "ISC",
