--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "if-env": "^1.0.4",
     "mongoose": "^4.11.10"
   }
 }
